--- a/examples/Lecture32/after/css/styles.css
+++ b/examples/Lecture32/after/css/styles.css
@@ -84,3 +84,12 @@ font-size: 1.8em;
  text-align: right;
  padding-right: 15px;
 }
+.navbar-header button.navbar-toggle, .navbar-header .icon-bar
+{
+  border: 1px solid #61122f;
+}
+.navbar-header button.navbar-toggle
+{
+  clear:both;
+  margin-top: -30px;
+}
