--- a/examples/Lecture34/after/css/styles.css
+++ b/examples/Lecture34/after/css/styles.css
@@ -94,15 +94,25 @@ font-size: 1.8em;
   margin-top: -30px;
 }
 /* END HEADER */
+/* HOME PAGE */
+.container .jumbotron
+{
+  box-shadow: 0 0 50px #3F0C1F;
+  border:2px solid #3F0C1F;
+}
 /*********** Large devices only ***********/
 @media (min-width: 1200px)
 {
-
+  .container .jumbotron{
+   background: url('../images/jumbotron_1200.jpg') no-repeat;
+   height: 675px;
+ }
 }
 
 /*********** Medium devices only ***********/
 @media (min-width: 992px) and (max-width: 1199px)
 {
+  /* Header */
   #logo-img
   {
    background: url('../images/restaurant-logo_medium.png') no-repeat;
@@ -110,12 +120,25 @@ font-size: 1.8em;
    height: 100px;
    margin: 5px 5px 5px 0;
   }
+   /* Header */
+
+    /* Home page */
+    .container .jumbotron{
+    background: url('../images/jumbotron_992.jpg') no-repeat;
+    height: 558px;
+  }
+  /* End Home Page */
 }
 
 /*********** Small devices only ***********/
 @media (min-width: 768px) and (max-width: 991px)
 {
-
+/* Home page */
+.container .jumbotron{
+  background: url('../images/jumbotron_768.jpg') no-repeat;
+  height: 432px;
+}
+/* End Home Page */
 }
 
 /*********** Extra small devices only ***********/
@@ -172,5 +195,10 @@ font-size: 1.8em;
     text-transform: uppercase;
   }
   /* End Header */
+  /* Home Page */
+  .container .jumbotron{
+    margin-top: 30px;
+    padding: 0;
+  }
 
 }
