--- a/examples/Lecture35/after/css/styles.css
+++ b/examples/Lecture35/after/css/styles.css
@@ -114,6 +114,31 @@ font-size: 1.8em;
 {
 box-shadow: 0 1px 5px 1px #cccccc;
 }
+
+#menu-tile
+{
+  background: url('../images/menu-tile.jpg') no-repeat;
+  background-position: center;
+}
+#specials-tile
+{
+  background: url('../images/specials-tile.jpg') no-repeat;
+  background-position: center;
+}
+
+#menu-tile span, #specials-tile span, #map-tile span
+{
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  text-align: center;
+  font-size: 1.6em;
+  text-transform: uppercase;
+  background-color: #000;
+  color: #fff;
+  opacity: .8;
+}
 /*********** Large devices only ***********/
 @media (min-width: 1200px)
 {
@@ -215,4 +240,23 @@ box-shadow: 0 1px 5px 1px #cccccc;
     padding: 0;
   }
 
+  #menu-tile, #specials-tile
+  {
+    width: 360px;
+    margin: 0 auto 15px;
+  }
+}
+
+@media (max-width: 479px)
+{
+  .navbar-brand h1 
+  {
+    padding-top: 5px;
+    font-size: 6vw;
+  }
+  #menu-tile, #specials-tile
+  {
+    width: 280px;
+    margin: 0 auto 15px;
+  }
 }
